# support-copilot

./: .env.example  README.md  demo.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
evals/: results.json  rubric.md  tickets.jsonl
scripts/: generate_evals.py  run_evals.py  setup.py
src/app/: llm.py  main.py  policies.py  retrieval.py  schemas.py  service.py
tests/: test_api.py  test_policies.py
